<resources>
    <string name="app_name">To Do</string>
    <string name="to_do_description">To Do Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_to_edit_task">Button to edit task</string>
    <string name="button_for_deleting_task">Button for deleting task</string>
    <string name="date">02–02-2021</string>
    <string name="enter_new_task">Enter new task</string>
    <string name="no_tasks_available">No tasks available</string>
    <string name="temperature">Temperature</string>
    <string name="error">......</string>
    <string name="feels_like">Feels like</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="location_error_msg">Error while getting location information. Please ensure your location is turned on</string>
    <string name="weather_updates_error">Error while getting weather updates. \n Please ensure you have internet connection</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="sure_to_delete_to_do">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="edit_task">Edit task</string>
    <string name="edit_this_task">Edit this Task</string>
    <string name="new_task">New Task</string>
    <string name="fahrenheit">°F</string>
    <string name="km_h">Km/h</string>
</resources>