<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Title of the dialog -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/edit_this_task"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/app_name"
        android:gravity="center_horizontal" />

    <!-- Description of the To_Do -->
    <EditText
        android:id="@+id/toDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/edit_task"
        android:inputType="textMultiLine|textCapSentences|textAutoComplete"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <!-- Save Button -->
        <Button
            android:id="@+id/saveButton"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/save"
            android:textColor="@color/colorWhite"/>

        <!-- Cancel button -->
        <Button
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:layout_width="0dp"
            android:text="@string/cancel"
            />

    </LinearLayout>

</LinearLayout>
