<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_arrow_back_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_task"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:gravity="center"
                android:textAlignment="center"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/edit_word"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="sans-serif-light"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/enter_new_task"
        android:gravity="center"
        android:inputType="textMultiLine|textCapSentences|textAutoComplete"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        android:textSize="18sp"
        android:autofillHints="@string/enter_new_task" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/save"
        android:layout_margin="16dp"
        android:textColor="#ffffff" />

</LinearLayout>
